# explorer-adf

./: .envrc  .gitignore  README.md  do  pyproject.toml
adf/: __init__.py  cli.py
adf/node/: __init__.py  activity.py  data.py  interrupt.py  node.py  pipeline.py  service.py  variable.py  web.py  workflow.py
tests/: test_adf.py
