[tool.poetry]
name = "adf"
version = "0.1.0"
description = "Azure Data Factory utilities to explore and inspect"
authors = ["Ali Kefia <ali.kefia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
graphviz = "^0.18"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.1"
black = "^21.10b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
adf = "adf.cli:main"
